--- a/predict/templates/submit_atp_result.html
+++ b/predict/templates/submit_atp_result.html
@@ -24,7 +24,7 @@
         <div class="card-body">
             <label>ATP-{{ atp }} 查询结果</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="atp" placeholder="无" value="{{ result }}" disabled>
+                <textarea class="form-control" name="atp" placeholder="{{ result }}" rows="5" disabled></textarea>
                 <span class="inpug-group-append">
             </span>
             </div>
