--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     {% include "head.html" %}
-    <title>means</title>
+    <title>means敏搜</title>
 </head>
 
 <body>
