--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">登录
-        <small>管理系统</small>
+        <small>means敏搜</small>
     </h1>
 
     <ol class="breadcrumb">
