--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar fixed-top navbar-expand-lg navbar-light fixed-top" style="background-color: #e3f2fd;">
     <div class="container">
-        <a class="navbar-brand" href="/">Means</a>
+        <a class="navbar-brand" href="/">Means敏搜</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
