--- a/templates/header.html
+++ b/templates/header.html
@@ -10,21 +10,21 @@
             <!-- Slide One - Set the background image for this slide in the line below -->
             <div class="carousel-item active" style="background-image: url('{% static 'images/home_1_1900_1080.jpg' %}')">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>值机室管理系统</h3>
+                    <h3>means敏搜</h3>
                     <p></p>
                 </div>
             </div>
             <!-- Slide Two - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('{% static 'images/home_2_1900_1080.jpg' %}')">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>无纸化模块</h3>
+                    <h3>模块一</h3>
                     <p></p>
                 </div>
             </div>
             <!-- Slide Three - Set the background image for this slide in the line below -->
             <div class="carousel-item" style="background-image: url('{% static 'images/home_3_1900_1080.jpg' %}')">
                 <div class="carousel-caption d-none d-md-block">
-                    <h3>人员管理模块</h3>
+                    <h3>模块二</h3>
                     <p></p>
                 </div>
             </div>
