--- a/templates/head.html
+++ b/templates/head.html
@@ -5,6 +5,8 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
+<link rel="icon" href="{% static 'icon/favicon.ico' %}" type="image/x-icon"/>
+
 <!-- Bootstrap core CSS -->
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
