--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     {% include "head.html" %}
-    <title>means敏搜</title>
+    <title>means敏库</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <div class="list-group" id="list-tab" role="tablist">
 <!--            <a class="list-group-item list-group-item-action" id="list-{ your id }-list" data-toggle="list" href="#list-{ your id }" role="tab" aria-controls="{ your id }">{ name }</a>-->
                 <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
-                   href="#list-home" role="tab" aria-controls="home">自有工具</a>
+                   href="#list-home" role="tab" aria-controls="home">means工具</a>
                 {% for key, value in content.items %}
                     <a class="list-group-item list-group-item-action" id="list-{{ key }}-list" data-toggle="list" href="#list-{{ key }}" role="tab" aria-controls="{{ key }}">{{ key }}</a>
                 {% endfor %}
@@ -33,12 +33,22 @@
             <div class="tab-content" id="nav-tabContent">
 <!--            <div class="tab-pane fade show" id="list-{ your id }" role="tabpanel" aria-labelledby="list-{ your id }-list">{ content }</div>-->
                 <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                    <p><a href="/search">搜索</a>&nbsp; 搜网盘、搜电影、电视剧</p>
+                    <p><a href="/search">敏搜搜索</a>&nbsp; 搜网盘、搜电影、电视剧</p>
                 </div>
                 {% for key, value in content.items %}
                     <div class="tab-pane fade show" id="list-{{ key }}" role="tabpanel" aria-labelledby="list-{{ key }}-list">
                         {% for v in value %}
-                            <p><a href="{{ v.url }}">{{ v.name}} </a>&nbsp; {{ v.content }}</p>
+                        <p>
+                            <a href="{{ v.url }}">{{ v.name}} </a>{{ v.content }}
+                            <div align="right">
+                                {% for i in v.star_fill %}
+                                    <img src="{% static 'icon/star-fill.svg' %}" alt="Bootstrap" width="16" height="16">
+                                {% endfor %}
+                                {% for i in v.star_empty %}
+                                    <img src="{% static 'icon/star.svg' %}" alt="Bootstrap" width="16" height="16">
+                                {% endfor %}
+                            </div>
+                        </p>
                         {% endfor %}
                     </div>
                 {% endfor %}
