--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     {% include "head.html" %}
-    <title>Means敏搜</title>
+    <title>means敏搜</title>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
 
     <br><br><br>
     <!-- Page Heading/Breadcrumbs -->
-    <h1 align="center">敏搜
-        <small>Means</small>
+    <h1 align="center">means
+        <small>敏搜</small>
     </h1>
 
     <br>
