--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 <!-- Page Content -->
 <div class="container">
 
-    <h1 class="my-4">欢迎访问</h1>
+    <h1 class="my-4">means敏库</h1>
 
     <div class="row">
         <div class="col-lg-3 mb-4">
