--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
                     <div class="tab-pane fade show" id="list-{{ key }}" role="tabpanel" aria-labelledby="list-{{ key }}-list">
                         {% for v in value %}
                         <p>
-                            <a href="{{ v.url }}">{{ v.name}} </a>{{ v.content }}
+                            <a href="{{ v.url }}">{{ v.name }} </a>{{ v.content }}
                             <div align="right">
                                 {% for i in v.star_fill %}
                                     <img src="{% static 'icon/star-fill.svg' %}" alt="Bootstrap" width="16" height="16">
@@ -47,6 +47,7 @@
                                 {% for i in v.star_empty %}
                                     <img src="{% static 'icon/star.svg' %}" alt="Bootstrap" width="16" height="16">
                                 {% endfor %}
+                                {{ v.score_count }}条评分
                             </div>
                         </p>
                         {% endfor %}
