add collection template and fix bugs

--- a/collection/templates/collection.html
+++ b/collection/templates/collection.html
@@ -38,7 +38,6 @@
                 {% for key, value in content.items %}
                     <div class="tab-pane fade show" id="list-{{ key }}" role="tabpanel" aria-labelledby="list-{{ key }}-list">
                         {% for v in value %}
-                        <p>
                             <a href="{{ v.url }}">{{ v.name }} </a>{{ v.content }}
                             <div align="right">
                                 {% for i in v.star_fill %}
@@ -47,9 +46,8 @@
                                 {% for i in v.star_empty %}
                                     <img src="{% static 'icon/star.svg' %}" alt="Bootstrap" width="16" height="16">
                                 {% endfor %}
-                                {{ v.score_count }}条评分
+                                {{ v.score_count }}条<a href="/collection/collection_details/{{ v.id }}">评分</a>
                             </div>
-                        </p>
                         {% endfor %}
                     </div>
                 {% endfor %}
