--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -11,6 +11,7 @@
 
 <!-- Navigation -->
 {% include "navigation.html" %}
+{% load custom_tags %}
 
 <!-- Page Content -->
 <div class="container">
@@ -20,7 +21,7 @@
         <small>密码</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         {% include "route.html" %}
         <li class="breadcrumb-item active">密码修改</li>
     </ol>
