--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
 {% load static %}
-<footer class="py-5" style="background-color: #e3f2fd;">
+{% load custom_tags %}
+<footer class="py-5" style="background-color: {% background_color %}">
     <div class="container">
         <p class="m-0 text-center text-gray">Copyright &copy; means 2021</p>
     </div>
