--- a/templates/pre_reset_password_by_email.html
+++ b/templates/pre_reset_password_by_email.html
@@ -3,6 +3,7 @@
 
 <head>
     {% load static %}
+    {% load custom_tags %}
     {% include "head.html" %}
     <title>重置密码</title>
 </head>
@@ -20,7 +21,7 @@
         <small>密码</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         {% include "route.html" %}
         <li class="breadcrumb-item active">重置密码</li>
     </ol>
