--- a/templates/user_setting.html
+++ b/templates/user_setting.html
@@ -3,6 +3,7 @@
 
 <head>
     {% load static %}
+    {% load custom_tags %}
     {% include "head.html" %}
     <title>个人设置</title>
 </head>
@@ -19,7 +20,7 @@
         <small>设置</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         {% include "route.html" %}
         <li class="breadcrumb-item active">个人设置</li>
     </ol>
