--- a/templates/error_404_clean.html
+++ b/templates/error_404_clean.html
@@ -3,6 +3,7 @@
 
 <head>
     {% load static %}
+    {% load custom_tags %}
     {% include "head.html" %}
     <title>404</title>
 
@@ -20,7 +21,7 @@
         <small>页面未找到</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         <li class="breadcrumb-item active">错误404</li>
     </ol>
 
