--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 
 <head>
     {% load static %}
+    {% load custom_tags %}
     {% include "head.html" %}
     <title>登录</title>
 </head>
@@ -20,7 +21,7 @@
         <small>means敏搜</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         {% include "route.html" %}
         <li class="breadcrumb-item active">登录</li>
     </ol>
