--- a/templates/pre_reset_password.html
+++ b/templates/pre_reset_password.html
@@ -3,6 +3,7 @@
 
 <head>
     {% load static %}
+    {% load custom_tags %}
     {% include "head.html" %}
     <title>重置密码方式选择</title>
 </head>
@@ -19,7 +20,7 @@
         <small>方式选择</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb" style="background-color: {% background_color %}">
         {% include "route.html" %}
         <li class="breadcrumb-item active">重置密码方式选择</li>
     </ol>
