--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     {% include "head.html" %}
-    <title>论坛</title>
+    <title>means敏思论坛</title>
 </head>
 
 <body>
