--- a/bbs/templates/view_post.html
+++ b/bbs/templates/view_post.html
@@ -5,7 +5,7 @@
     {% load static %}
     {% load custom_tags %}
     {% include "head.html" %}
-    <title>论坛</title>
+    <title>means敏思论坛</title>
 </head>
 
 <body>
