--- a/collection/templates/collection_details.html
+++ b/collection/templates/collection_details.html
@@ -6,7 +6,7 @@
     {% load custom_tags %}
     {% include "head.html" %}
     {% include "style_img.html" %}
-    <title>means敏库</title>
+    <title>means敏思学习资源</title>
 </head>
 
 <body>
