--- a/collection/templates/collection.html
+++ b/collection/templates/collection.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
     {% include "head.html" %}
-    <title>means</title>
+    <title>means敏思学习资源</title>
 </head>
 
 <body>
@@ -16,14 +16,14 @@
 <!-- Page Content -->
 <div class="container">
 
-    <h1 class="my-4">means敏库</h1>
+    <h1 class="my-4">means</h1>
 
     <div class="row">
         <div class="col-lg-3 mb-4">
             <div class="list-group" id="list-tab" role="tablist">
 <!--            <a class="list-group-item list-group-item-action" id="list-{ your id }-list" data-toggle="list" href="#list-{ your id }" role="tab" aria-controls="{ your id }">{ name }</a>-->
                 <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
-                   href="#list-home" role="tab" aria-controls="home">means工具</a>
+                   href="#list-home" role="tab" aria-controls="home">means敏思</a>
                 {% for key, value in content.items %}
                     <a class="list-group-item list-group-item-action" id="list-{{ key }}-list" data-toggle="list" href="#list-{{ key }}" role="tab" aria-controls="{{ key }}">{{ key }}</a>
                 {% endfor %}
@@ -33,7 +33,7 @@
             <div class="tab-content" id="nav-tabContent">
 <!--            <div class="tab-pane fade show" id="list-{ your id }" role="tabpanel" aria-labelledby="list-{ your id }-list">{ content }</div>-->
                 <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                    <h2>全手工收集，个人自用的学习版资源</h2>
+                    <h2>各种学习资源，选择相应分类后，用CTRL+F进行搜索</h2>
                 </div>
                 {% for key, value in content.items %}
                     <div class="tab-pane fade show" id="list-{{ key }}" role="tabpanel" aria-labelledby="list-{{ key }}-list">
